--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html lang="en">
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
-<title>GENERAL Responsive</title>
+<title>Portable Fridge</title>
 <link href="https://zfkvmtekmk.funnelish.com" rel="canonical"/>
 <meta content="ie=edge" http-equiv="X-UA-Compatible"/>
 <meta content="" name="description"/>
